<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnCopyToClipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_to_board" />

    <EditText
        android:layout_marginVertical="8dp"
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:gravity="top"
        android:hint="@string/enter_text"
        android:inputType="textMultiLine"
        android:maxLines="3" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_text" />

    <Spinner
        android:id="@+id/modelSelectionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp" />

    <Button
        android:id="@+id/btnLoadModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_model" />

    <Button
        android:id="@+id/btnLoadVocab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_vocab" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_model" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/resultsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </ScrollView>

</LinearLayout>